Feature/hu003 t03 generacion password temporal y envio de credenciales (#24)
* feature(auth): asegurar validación y configuración de JWT #55

* feat: conexion de servicio de email #63

* feat(mensajero): crear modelo, migración y pruebas de persistencia #68

* feat(HU003): implementar registro de mensajeros con validación de roles

* feat(mensajero): generar contraseña temporal y enviar credenciales por correo #70

---------

Co-authored-by: Genesis Silesky Araya <sileskyg26@gmail.com>